--- a/multi-cluster/cert-manager/fleet.yaml
+++ b/multi-cluster/cert-manager/fleet.yaml
@@ -1,4 +1,5 @@
-namespace: cert-manager
+# namespace: cert-manager
+defaultNamespace: cert-manager
 
 helm:
   # Use a custom location for the Helm chart. This can refer to any go-getter URL.
