--- a/multi-cluster/guestbook/fleet.yaml
+++ b/multi-cluster/guestbook/fleet.yaml
@@ -1,3 +1,12 @@
 namespace: fleet-mc-helm-external-example
 helm:
   chart: https://github.com/rancher/fleet-examples/releases/download/example/guestbook-0.0.0.tgz
+targetCustomizations:
+  - name: custom
+    clusterSelector:
+      matchLabels:
+        name: unity-pre-onboarding-test3-ucs1
+    helm:
+      values:
+        service:
+          port: 9999
